[gd_scene load_steps=10 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Pieces/Bishop.tscn" type="PackedScene" id=2]
[ext_resource path="res://Pieces/Rook.tscn" type="PackedScene" id=3]
[ext_resource path="res://Pieces/Knight.tscn" type="PackedScene" id=4]
[ext_resource path="res://Pieces/Queen.tscn" type="PackedScene" id=5]
[ext_resource path="res://Pieces/King.tscn" type="PackedScene" id=6]
[ext_resource path="res://Pieces/Pawn.tscn" type="PackedScene" id=7]
[ext_resource path="res://Board2.tscn" type="PackedScene" id=8]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=9]

[node name="Main" type="Node" index="0"]

script = ExtResource( 1 )

[node name="WhitePieces" type="Spatial" parent="." index="0"]

editor/display_folded = true

[node name="Bishop1" parent="WhitePieces" index="0" instance=ExtResource( 2 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.72907, 2.55028, -7.84568 )

[node name="Rook1" parent="WhitePieces" index="1" instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.1436, 2.17365, -7.82692 )

[node name="Knight1" parent="WhitePieces" index="2" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.48609, 2.77343, -7.79438 )

[node name="Queen" parent="WhitePieces" index="3" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.941771, 2.9169, -7.78429 )

[node name="King" parent="WhitePieces" index="4" instance=ExtResource( 6 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.40878, 2.51301, -7.73314 )

[node name="Bishop2" parent="WhitePieces" index="5" instance=ExtResource( 2 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.42385, 2.8507, -8.59789 )

[node name="Rook2" parent="WhitePieces" index="6" instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10.7975, 3.7543, -6.89533 )

[node name="Knight2" parent="WhitePieces" index="7" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.56876, 2.29693, -8.07415 )

[node name="Pawn1" parent="WhitePieces" index="8" instance=ExtResource( 7 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.33414, 2.61968, -1.91418 )

[node name="Pawn2" parent="WhitePieces" index="9" instance=ExtResource( 7 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -11.4121, 1.55286, -3.97304 )

[node name="Pawn3" parent="WhitePieces" index="10" instance=ExtResource( 7 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.06485, 1.82313, -3.53619 )

[node name="Pawn4" parent="WhitePieces" index="11" instance=ExtResource( 7 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.08443, 1.39849, -4.00259 )

[node name="Pawn5" parent="WhitePieces" index="12" instance=ExtResource( 7 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.49, 2.08851, -1.84008 )

[node name="Pawn6" parent="WhitePieces" index="13" instance=ExtResource( 7 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.13412, 2.33943, -1.87607 )

[node name="Pawn7" parent="WhitePieces" index="14" instance=ExtResource( 7 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.94134, 2.29684, -3.13412 )

[node name="Pawn8" parent="WhitePieces" index="15" instance=ExtResource( 7 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.486547, 2.07513, -3.66933 )

[node name="BlackPieces" type="Spatial" parent="." index="1"]

editor/display_folded = true

[node name="Bishop1" parent="BlackPieces" index="0" instance=ExtResource( 2 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.16015, 2.55028, 11.8762 )

[node name="Rook1" parent="BlackPieces" index="1" instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.5747, 2.17365, 11.8949 )

[node name="Knight1" parent="BlackPieces" index="2" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.91716, 2.77343, 11.9275 )

[node name="Queen" parent="BlackPieces" index="3" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.51069, 2.9169, 11.9375 )

[node name="King" parent="BlackPieces" index="4" instance=ExtResource( 6 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.83985, 2.51301, 11.9887 )

[node name="Bishop2" parent="BlackPieces" index="5" instance=ExtResource( 2 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.99277, 2.8507, 11.124 )

[node name="Rook2" parent="BlackPieces" index="6" instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -11.3665, 3.7543, 12.8265 )

[node name="Knight2" parent="BlackPieces" index="7" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.13769, 2.29693, 11.6477 )

[node name="Pawn1" parent="BlackPieces" index="8" instance=ExtResource( 7 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.1688, 2.61968, 7.43172 )

[node name="Pawn2" parent="BlackPieces" index="9" instance=ExtResource( 7 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -11.2467, 1.55286, 5.37286 )

[node name="Pawn3" parent="BlackPieces" index="10" instance=ExtResource( 7 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.89951, 1.82313, 5.80971 )

[node name="Pawn4" parent="BlackPieces" index="11" instance=ExtResource( 7 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.91909, 1.39849, 5.34331 )

[node name="Pawn5" parent="BlackPieces" index="12" instance=ExtResource( 7 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.6553, 2.08851, 7.50582 )

[node name="Pawn6" parent="BlackPieces" index="13" instance=ExtResource( 7 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.29946, 2.33943, 7.46982 )

[node name="Pawn7" parent="BlackPieces" index="14" instance=ExtResource( 7 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.10668, 2.29684, 6.21178 )

[node name="Pawn8" parent="BlackPieces" index="15" instance=ExtResource( 7 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.18535, -0.031415, 2.96307 )

[node name="Camera" type="Camera" parent="." index="2"]

transform = Transform( 1, 0, 0, 0, 0.705513, 0.708697, 0, -0.708697, 0.705513, 2.0171, 5.07668, 7.42559 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = true
fov = 30.9375
size = 1.0
near = 0.05
far = 100.0

[node name="Board" parent="." index="3" instance=ExtResource( 8 )]

transform = Transform( 0.92, 0, 0, 0, 0.92, 0, 0, 0, 0.92, 1.14777, -0.502145, 3.86449 )
_sections_unfolded = [ "Transform" ]

[node name="HUD" parent="." index="4" instance=ExtResource( 9 )]

pause_mode = 2
_sections_unfolded = [ "Pause" ]

[connection signal="release" from="Board" to="." method="_on_Board_release"]


